--- a/Fronends/src/app/component/pag-menu/pag-menu.component.html
+++ b/Fronends/src/app/component/pag-menu/pag-menu.component.html
@@ -11,13 +11,16 @@
           <a class="nav-link" href="#">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Acerca de</a>
+          <a class="nav-link"  routerLink="/acerca">Acerca de</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/usuario">Usuario</a>
+          <a  class="nav-link "   routerLink="/usuario">Usuario</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="cerrarSession()">Cerrar Sesión</a>
+          <a  class="nav-link"   routerLink="/accion">Accion</a>
+        </li>
+        <li class="nav-item">
+          <a class="visible" class="nav-link" (click)="cerrarSession()">Cerrar Sesión</a>
         </li>
       </ul>
     </div>
