--- a/Fronends/src/app/component/usuario/usuario.component.html
+++ b/Fronends/src/app/component/usuario/usuario.component.html
@@ -1,24 +1,24 @@
 <app-pag-menu></app-pag-menu>
-<div class="container">
-  <div class="row">
-    <div class="col-12">
+<div class="container mx=mx-auto">
+
       <input class="form-control" type="text" [(ngModel)]="BuscarName" id="">
-    
+
       <button class="btn btn-danger" (click)="BuscarForUsername()">buscar</button>
-      <table class="table table-bordered border border-2 border-light bdr rounded-3 ">
+      <div class="overflow-x-auto">
+      <table class="table table-bordered  sm:w-full md:w-full lg:w-full xl:w-full ">
         <thead>
           <tr>
-            <th scope="col">Usuario</th>
-            <th scope="col">correo</th>
-            <th scope="col">Acciones</th>
+            <th >Usuario</th>
+            <th >correo</th>
+            <th >Acciones</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let key of User">
-            <td>{{key.username}}</td>
-            <td>{{key.email}}</td>
-            <td>
-              <button [disabled]="Role === 'user'" (click)="deleteUser(key)" class="btn"><img
+            <td >{{key.username}}</td>
+            <td >{{key.email}}</td>
+            <td >
+              <button  [disabled]="Role === 'user'" (click)="deleteUser(key)" class="btn"><img
                   src="https://cdn.icon-icons.com/icons2/1880/PNG/512/iconfinder-trash-4341321_120557.png"
                   alt=""></button>
               <button [disabled]="Role === 'user'" class="btn" (click)="ediUser(key)"><img
@@ -28,30 +28,43 @@
         </tbody>
       </table>
     </div>
-  </div>
-</div>
+    </div>
 
 
-<div  *ngIf="ToListAuths" class="container mt-5">
+
+
+
+
+
+
+
+
+
+
+
+<div *ngIf="ToListAuths" class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <form (submit)="updateUserForm()">
         <div class="form-group">
           <label for="usuario">Usuario:</label>
-          <input type="text" name="username" class="form-control" [(ngModel)]="ToListAuths.username" id="usuario" placeholder="Ingresa tu usuario">
+          <input type="text" name="username" class="form-control" [(ngModel)]="ToListAuths.username" id="usuario"
+            placeholder="Ingresa tu usuario">
         </div>
         <div class="form-group">
           <label for="correo">Correo Electrónico:</label>
-          <input type="text" name="email" class="form-control"[(ngModel)]="ToListAuths.email" id="correo" placeholder="Ingresa tu correo electrónico">
+          <input type="text" name="email" class="form-control" [(ngModel)]="ToListAuths.email" id="correo"
+            placeholder="Ingresa tu correo electrónico">
         </div>
         <div class="form-group">
           <label for="correo">Role:</label>
-          <input type="text" name="role" class="form-control" [(ngModel)]="ToListAuths.role" id="correo" placeholder="Ingresa tu correo electrónico">
+          <input type="text" name="role" class="form-control" [(ngModel)]="ToListAuths.role" id="correo"
+            placeholder="Ingresa tu correo electrónico">
         </div>
 
-       
-          <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
+
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
     </div>
   </div>
 
@@ -62,7 +75,8 @@
 
 
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" *ngIf="update_user == true" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" *ngIf="update_user == true"
+  aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -71,7 +85,8 @@
       </div>
       <div class="modal-body"> ... </div>
       <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button> </div>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
     </div>
   </div>
 </div>
