--- a/Fronends/src/app/component/changes-password/changes-password.component.html
+++ b/Fronends/src/app/component/changes-password/changes-password.component.html
@@ -1,1 +1,20 @@
-<p>changes-password works!</p>
+
+
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h2 class="mb-4">Cambiar Contraseña</h2>
+    <form [formGroup]="formSigUp" >
+        <div class="mb-3">
+          <label for="contrasenaActual" class="form-label">Contraseña Actual</label>
+          <input type="password" formControlName="passwordConfin"class="form-control"  name="passwordConfin" required>
+        </div>
+        <div class="mb-3">
+          <label  class="form-label">Nueva Contraseña</label>
+          <input type="password" formControlName="password" class="form-control"  name="password" required>
+        </div>
+        <button (click)="chanesthePasswword()" class="btn btn-primary">Guardar Cambios</button>
+    </form>
+    </div>
+  </div>
+</div>
